Add Home section and navbar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manuel Grgic</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <nav>
+        <a href="#home">Home</a>
+    </nav>
+    <main>
+        <section id="home">
+            <header>
+                <h1>Manuel Grgic</h1>
+                <h2>I'm a <span class="auto-type"></div></h2>
+            </header>
+        </section>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script>
+        var options = {
+            strings: ['Fullstack Web Developer', 'Freelancer', 'Gamer'],
+            typeSpeed: 40,
+            backSpeed: 40,
+            loop: true
+        }
+
+        var typed = new Typed('.auto-type', options);
+    </script>
 </body>
 </html>
