--- a/index.html
+++ b/index.html
@@ -21,15 +21,6 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script>
-        var options = {
-            strings: ['Fullstack Web Developer', 'Freelancer', 'Gamer'],
-            typeSpeed: 40,
-            backSpeed: 40,
-            loop: true
-        }
-
-        var typed = new Typed('.auto-type', options);
-    </script>
+    <script type="application/javascript" src="js/script.js"></script>
 </body>
 </html>
