--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manuel Grgic</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
 <body>
     <nav>
         <a href="#home">Home</a>
+        <a href="#about">About Me</a>
+        <a href="#skills">My Skills</a>
     </nav>
     <main>
         <section id="home">
@@ -17,6 +20,48 @@
                 <h1>Manuel Grgic</h1>
                 <h2>I'm a <span class="auto-type"></div></h2>
             </header>
+        </section>
+        <section id="about">
+            <header>
+                <h3>About Me</h3>
+                <h4><em>Get to know me</em></h4>
+            </header>
+            <div class="card">
+                <img src="images/me.jpg" alt="Manuel Grgic in London">
+                <div class="info">
+                    <h4>Who am I?</h4>
+                    <h5>Hi, I'm Manuel Grgic, a Fullstack Web Developer.</h5>
+                    <p>
+                        I am a software developer based in Switzerland and I have been building my very own websites and web applications for some time now.
+                        I like coming up with ideas and visions and transform those into meaningful and useful software products.
+                        Take a look at my portfolio and see what I am capable of doing. I am sure you will be satisfied with what you see and I hope
+                        we can work together on your next project.
+                    </p>
+                    <hr>
+                    <div class="name_mail">
+                        <p><strong>Name</strong>: Manuel Grgic Figueiredo</p>
+                        <p><strong>Email</strong>: <a href="mailto:manuel.grgic@proton.me">manuel.grgic@proton.me</a></p>
+                    </div>
+                    <p><strong>Location</strong>: Lugano, Ticino, Switzerland</p>
+                </div>
+            </div>
+        </section>
+        <section id="skills">
+            <header>
+                <h3>My Skills</h3>
+                <p>
+                    I am a creative problem solver. I build fullstack web applications. I use C#, SQL, ASP.net, Javascript, HTML, CSS.
+                    In here, I highlight the key technical skills that I can bring to your project.
+                </p>
+            </header>
+            <div class="skillcards">
+                <div>
+                    <i class="devicon-csharp-plain"></i>
+                </div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </section>
     </main>
 
