Add My Skills section and navbar link

--- a/index.html
+++ b/index.html
@@ -54,14 +54,35 @@
                     In here, I highlight the key technical skills that I can bring to your project.
                 </p>
             </header>
-            <div class="skillcards">
-                <div>
+            <article class="skillcards">
+                <article>
                     <i class="devicon-csharp-plain"></i>
-                </div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
+                    <h4>C# Development</h4>
+                    <p>
+                        I use C# on a daily basis to build websites and mobile applications. You can see examples of my work
+                        implementing C# in my projects sections.
+                    </p>
+                </article>
+                <article>
+                    <i class="devicon-dot-net-plain-wordmark"></i>
+                    <h4>Fullstack Web Development</h4>
+                    <p>
+                        I use proven design patterns and frameworks to build websites. ASP.net and MVC fits the bill for most project.
+                        Visit my projects to see examples.
+                    </p>
+                </article>
+                <article>
+                    <div class="frontend">
+                        <i class="devicon-html5-plain"></i>
+                        <i class="devicon-css3-plain"></i>
+                        <i class="devicon-javascript-plain"></i>
+                    </div>
+                    <h4>Front End Development</h4>
+                    <p>I use HTML, CSS and Javascript to build attractive responsive frontends for websites. Go to my projects sections to see my
+                        front end work.
+                    </p>
+                </article>
+            </article>
         </section>
     </main>
 
