Add call to action banner

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                 </article>
             </article>
         </section>
+        <section id="cta">
+            <p>Like what you see? Feel free to contact me!</p>
+            <button type="button"><a href="#contact">Let's work together!</a></button>
+        </section>
+        <section id="contact"></section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
