--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <p>Like what you see? Feel free to contact me!</p>
             <button type="button"><a href="#contact">Let's work together!</a></button>
         </section>
+        <section id="projects"></section>
         <section id="contact"></section>
     </main>
 
