Add My Projects Section and navbar link to it

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="#home">Home</a>
         <a href="#about">About Me</a>
         <a href="#skills">My Skills</a>
+        <a href="#projects">My Projects</a>
     </nav>
     <main>
         <section id="home">
@@ -88,8 +89,30 @@
             <p>Like what you see? Feel free to contact me!</p>
             <button type="button"><a href="#contact">Let's work together!</a></button>
         </section>
-        <section id="projects"></section>
-        <section id="contact"></section>
+        <section id="projects">
+            <header>
+                <h3>My Projects</h3>
+                <p>
+                    By showcasing these complete functional projects, I hope to demonstrate what I can bring to your project. I built these projects
+                    from the ground up, and they can attest to both my frontend and backend skills. You can easily demo all of these projects.
+                    Feel free to contact me to get a complete walkthrough of the code.
+                </p>
+            </header>
+            <article class="projectcards">
+                <a href="">
+                    <img src="images/Squasher.png" alt="Bug Tracker">
+                </a>
+                <a href="">
+                    <img src="images/Mon3y.png" alt="Financial Tracker">
+                </a>
+                <a href="">
+                    <img src="images/CodingAway.png" alt="Blog Website">
+                </a>
+            </article>
+        </section>
+        <section id="contact">
+            <form action=""></form>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
